@@ -196,6 +196,9 @@ APR_DECLARE(apr_status_t) apr_socket_recvfrom(apr_sockaddr_t *from,
         (*len) = 0;
         return apr_get_netos_error();
     }
+
+    from->port = ntohs(from->sa.sin.sin_port);
+
     (*len) = rv;
     if (rv == 0 && sock->type == SOCK_STREAM)
         return APR_EOF;
